fix sidebar z-index

--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.scss
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.scss
@@ -23,7 +23,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10000;
+    z-index: 10;
 
     header {
       display: flex;
